--- a/FinanzasBGX.Web/web/compra/Proveedor.xhtml
+++ b/FinanzasBGX.Web/web/compra/Proveedor.xhtml
@@ -16,7 +16,7 @@
                     <div class="col-2">
                         <h:outputText value="Fecha inicial" />
                     </div>
-                    <div class="col-3" style="margin-top:-8px">
+                    <div class="col-3 calendar" style="margin-top:-8px">
                         <p:calendar id="startDate" value="#{compraController.supplierViewStartDate}"
                                     pattern="dd/MM/yyyy" effect="slideDown" navigator="true"
                                     maxdate="#{compraController.supplierViewEndDate}"
@@ -28,7 +28,7 @@
                     <div class="col-2" style="margin-left: -25px">
                         <h:outputText value="Fecha fin" />
                     </div>
-                    <div class="col-3" style="margin-top:-8px">
+                    <div class="col-3 calendar" style="margin-top:-8px">
                         <p:calendar id="endDate" value="#{compraController.supplierViewEndDate}"
                                     pattern="dd/MM/yyyy" effect="slideDown" navigator="true"
                                     mindate="#{compraController.supplierViewStartDate}"
