--- a/FinanzasBGX.Web/web/pendiente/Inventario.xhtml
+++ b/FinanzasBGX.Web/web/pendiente/Inventario.xhtml
@@ -7,43 +7,41 @@
       xmlns:p="http://primefaces.org/ui">
     <ui:composition template="/template/pendiente.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.PendienteCobrarTitle}" class="text-info"></h:outputText>
+            <h:outputText value="#{bundle.InventarioTitle}" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
                 <div class="row" style="margin-top: -20px; margin-left: -5px">
                     <div class="col-2">
-                        <h:outputText value="Distribuidor" />
+                        <h:outputText value="Componente" />
                     </div>
                     <div class="col-3" style="margin-left:-50px;">
-                        <h:selectOneMenu value="#{ventaController.pendienteCobrarViewCurrentDistributor}" style="width: 250px">               
+                        <h:selectOneMenu value="#{compraController.inventarioViewCurrentComponent}" style="width: 250px">               
                             <f:selectItem itemLabel="" itemValue="-1" noSelectionOption="true" />
-                            <f:selectItems value="#{clienteController.distributors}" var="d"
-                                          itemLabel="#{d.nombre}" itemValue="#{d.id}" />
+                             <f:selectItems value="#{componenteController.getComponents(-1)}" var="c"
+                                           itemLabel="#{c.nombre}" itemValue="#{c.id}" />
                             <f:ajax  />
                         </h:selectOneMenu>
                     </div>
                     <div class="col-1" style="padding: 0px !important; margin-left: 15px">
                         <h:commandButton  value="Buscar" immediate="true" class="btn btn-info"
-                                          action="#{ventaController.searchPendienteCobrar}">
-                            <f:ajax render="dtPendiente"/>
+                                          action="#{compraController.searchInventario}">
+                            <f:ajax render="dtInventario"/>
                             <f:ajax render="searchText"/>
                         </h:commandButton>
                     </div>
                 </div>
                 <h:outputText id="searchText" style="font-size: 13.6px; margin-left: 5px" class="text-success"
-                              value="#{ventaController.pendienteCobrarViewSearch}"/>
+                              value="#{compraController.monthViewSearch}"/>
                  <div style="overflow: auto; max-height: 400px;">
-                     <p:dataTable id="dtPendiente" tableStyleClass="table table-striped"
-                             value="#{ventaController.pendienteCobrarDistribuidor}" 
+                     <p:dataTable id="dtInventario" tableStyleClass="table table-striped"
+                             value="#{compraController.totalInventario}" 
                              var="item">
-                        <p:column sortBy="distribuidor" headerText="#{bundle.ListSalesDistributor_distribuidor}">
-                            <h:outputText value="#{item.distribuidor}"/>
+                        <p:column sortBy="componente" headerText="#{bundle.ListPurchasesComponent_component}">
+                            <h:outputText value="#{item.componente}"/>
                         </p:column>
-                        <p:column sortBy="total" headerText="#{bundle.ListPendienteCobrar_total}">
-                            <h:outputText value="#{item.total}">
-                                <f:convertNumber type="currency" currencySymbol="$ " />
-                            </h:outputText>
+                        <p:column sortBy="total" headerText="#{bundle.ListInventario_total}">
+                            <h:outputText value="#{item.cantidad}" />
                         </p:column>
                     </p:dataTable>
                  </div>
